--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ $("[name='search_btn']").click(function(event) {
 
 		</dd>
 
- <dd class="about_logo" ><a href="https://shuziyimin.org" title="数字移民" target="_blank"> <i class="icon iconfont icon-a-99" style=" font-size: 36px; " ></i></a></dd>
+ <dd class="about_logo" ><a href="https://daohang.shuziyimin.net" title="数字移民" target="_blank"> <i class="icon iconfont icon-a-99" style=" font-size: 36px; " ></i></a></dd>
  
 
 		<!-- <dd class="about_logo"><a href="About_us.htm" title="关于" target="_blank"><i class="icon iconfont icon-_huaban" style="font-size: 52px;"></i></a></dd>	  -->
