--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@ $("[name='search_btn']").click(function(event) {
         <a href="http://houqigo.com" target="_blank" title="后期导航">后期</a>　
         <a href="https://kedaxmt.com" target="_blank" title="运营导航">运营</a>　
         <a href="https://ai-bot.cn/" target="_blank" title="AI导航">AI</a>　
-        <a href="https://airplane.us.kg/" target="_blank" title="科学上网">｜ &nbsp; &nbsp;</a>
+        <a href="https://run.wangying.me/" target="_blank" title="科学上网">｜ &nbsp; &nbsp;</a>
         <!-- <a >群1：209609939</a>　 -->
         <a target="_blank" href="tel:+8617872364540" >手机：17872364540</a>　
-        <a target="_blank" href="mailto:work@wangying.us.kg" >邮箱：work@wangying.us.kg</a></dd>
+        <a target="_blank" href="mailto:work@wangying.us.kg" >邮箱：work@wangying.me</a></dd>
      <!--    <dd class="copyrights_wz">Link<br> -->
 
 <!--          <a href="https://zhishimt.com/" target="_blank">知识麦田</a>　
