--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@ $("[name='search_btn']").click(function(event) {
           <ul class="dropdown">
             <div class="index_nav3" style="padding: 0px 0px 0px 9px !important;">
               <div class="index_nav_icon" style="padding: 0px !important;">
-                <a href="https://wangying.us.kg/">王颖</a></div>
+                <a href="https://wangying.me/">王颖</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
                 <a href="Brand/Brand19/index.htm">关于我</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
                 <a href=https://singlelogin.re>图书馆</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
-                <a href="https://ys.urlsdh.com">电影院</a></div>
+                <a href="https://y4dh.com">电影院</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
                 <a href=https://open.spotify.com>音乐库</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
@@ -239,7 +239,7 @@ $("[name='search_btn']").click(function(event) {
     <div class="design_studio" id="border2" ><a href="https://open.spotify.com/" target="_blank" ><i class="icon iconfont icon-liwuhe" id="icon"></i><br><font face="微软雅黑" >音 乐 库</font></a></div>
     <div class="design_studio" id="border3"><a href="https://tophub.today" target="_blank" ><i class="icon iconfont icon-gjux" id="icon"></i><br><font face="微软雅黑" >热 点 榜</font></a></div>
     <div class="design_studio" id="border4"><a href="https://c3t9nxd2rq.feishu.cn/wiki/wikcnlgIqDgodSNP6Q4n7zGwJMh" target="_blank" ><i class="icon iconfont icon-Group3" id="icon"></i><br><font face="微软雅黑" >知 识 库</font></a></div>
-    <div class="design_studio" id="border5"><a href="https://ys.urlsdh.com" target="_blank" ><i class="icon iconfont icon-GroupCopy6" id="icon"></i><br><font face="微软雅黑" >电 影 院</font></a></div>
+    <div class="design_studio" id="border5"><a href="https://y4dh.com" target="_blank" ><i class="icon iconfont icon-GroupCopy6" id="icon"></i><br><font face="微软雅黑" >电 影 院</font></a></div>
     <div class="design_studio" id="border6"><a href="https://www.qijishow.com/down/index.html" target="_blank" ><i class="icon iconfont icon-Group5" id="icon"></i><br><font face="微软雅黑" >工 具 箱</font></a></div>
 </div>
 </div>
@@ -256,7 +256,7 @@ $("[name='search_btn']").click(function(event) {
         <a href="https://run.wangying.me/" target="_blank" title="科学上网">｜ &nbsp; &nbsp;</a>
         <!-- <a >群1：209609939</a>　 -->
         <a target="_blank" href="tel:+8617872364540" >手机：17872364540</a>　
-        <a target="_blank" href="mailto:work@wangying.us.kg" >邮箱：work@wangying.me</a></dd>
+        <a target="_blank" href="mailto:work@wangying.me" >邮箱：work@wangying.me</a></dd>
      <!--    <dd class="copyrights_wz">Link<br> -->
 
 <!--          <a href="https://zhishimt.com/" target="_blank">知识麦田</a>　
@@ -295,7 +295,7 @@ $("[name='search_btn']").click(function(event) {
 				<a href="https://www.wenshushu.cn" target="_blank" style="color: #ababab;">湘ICP备2023015572号-1</a>
 			</p>
 			<p style="width: 280px;padding-left: 12px;">
-				Copyright © wangying.us.kg. 版权所有.
+				Copyright © wangying.me. 版权所有.
 			</p>
 		</div>
 		<!--<![endif]-->
