--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ $("[name='search_btn']").click(function(event) {
               <div class="index_nav_icon" style="padding: 0px !important;">
                 <a href="Brand/Brand19/index.htm">关于我</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
-                <a href=https://singlelogin.re>图书馆</a></div>
+                <a href=https://z-library.sk>图书馆</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
                 <a href="https://y4dh.com">电影院</a></div>
               <div class="index_nav_icon" style="padding: 0px !important;">
@@ -234,7 +234,7 @@ $("[name='search_btn']").click(function(event) {
 	<!--功能模块-->
 <div class="central_k">
 <div class="central"> 
-    <div class="design_studio" id="border1" ><a href="https://singlelogin.re" target="_blank" ><i class="icon iconfont icon-Group" id="icon"></i><br><font face="微软雅黑" >图 书 馆</font></a></div>
+    <div class="design_studio" id="border1" ><a href="https://z-library.sk" target="_blank" ><i class="icon iconfont icon-Group" id="icon"></i><br><font face="微软雅黑" >图 书 馆</font></a></div>
 <!--     <div class="design_studio" id="border2" ><a href="https://www.qijishow.com/shop.html" target="_blank" ><i class="icon iconfont icon-liwuhe" id="icon"></i><br><font face="微软雅黑" >衍 预 约</font></a></div> -->
     <div class="design_studio" id="border2" ><a href="https://open.spotify.com/" target="_blank" ><i class="icon iconfont icon-liwuhe" id="icon"></i><br><font face="微软雅黑" >音 乐 库</font></a></div>
     <div class="design_studio" id="border3"><a href="https://tophub.today" target="_blank" ><i class="icon iconfont icon-gjux" id="icon"></i><br><font face="微软雅黑" >热 点 榜</font></a></div>
@@ -286,7 +286,7 @@ $("[name='search_btn']").click(function(event) {
 </div>
 		<!--[if !IE]><!-->
 			<div class="cb" style="font-size: 12px;float: right; margin-top: -50px;margin-right: 35px;color: #A2A2A2;">
-			<p><a href="https://airportal.cn" target="_blank" style="color: #ababab;">湘ICP备2023015572号-1</a><a href="index.html" target="_blank" style="color: #ababab;">wangying.us.kg</a>版权所有.</p>
+			<p><a href="https://airportal.cn" target="_blank" style="color: #ababab;">湘ICP备2023015572号-1</a><a href="index.html" target="_blank" style="color: #ababab;">wangying.me</a>版权所有.</p>
 		    </div>
 		<!--<![endif]-->
 		<!--[if !IE]><!-->
