--- a/Brand/Brand19/index.htm
+++ b/Brand/Brand19/index.htm
@@ -743,15 +743,15 @@ s.parentNode.insertBefore(hm, s);
 	 <i class="fa fa-calendar"style=" padding-right: 5px;"></i>出生日期</b> 2000年2月13日</li>
 	 <li>
 	 <b>
-	 <i class="fa fa-map-marker"style=" padding-right: 5px;"></i>现居住在</b>重庆，沙坪坝</li>
+	 <i class="fa fa-map-marker"style=" padding-right: 5px;"></i>现居住在</b>深圳，宝安</li>
 	 <li>
 	 <b>
 	 <i class="fa fa-paper-plane-o"style=" padding-right: 5px;"></i>视频博客</b>
 	 <a href="https://space.bilibili.com/315062665?spm_id_from=333.1007.0.0">王颖的bilibili</a></li>
 	 <li><b><i class="fa fa-link"style=" padding-right: 5px;"></i>个人网站</b> 
-	 <a href="../../index.html" target="_blank">wangying.us.kg</a></li>
+	 <a href="../../index.html" target="_blank">wangying.me</a></li>
 	 <li><b><i class="fa fa-file-text-o"style=" padding-right: 5px;"></i>邮箱</b> 
-	 <a href="mailto:work@wangying.us.kg"target="_blank">work@wangying.us.kg</a></li>
+	 <a href="mailto:work@wangying.me"target="_blank">work@wangying.me</a></li>
 	 <li><b><i class="fa fa-pencil"style=" padding-right: 5px;"></i>微博</b>
 	 <a href="https://weibo.com/u/7104453221">https://weibo.com/u/7104453221</a></li>
 	 <li><b><i class="fa fa-phone"style=" padding-right: 5px;"></i>联系QQ</b><a href="https://qm.qq.com/cgi-bin/qm/qr?k=o5oNYxWx8KVSpxwe2nYnZIgxRWUgndqC&noverify=0&personal_qrcode_source=3" title="QQ联系" target="_blank">QQ:1378484837</a></li>
